styles for token front-end

--- a/dpc-web/app/assets/stylesheets/application.scss
+++ b/dpc-web/app/assets/stylesheets/application.scss
@@ -31,6 +31,7 @@
  @import "components/boxes";
  @import "components/buttons";
  @import "components/cards";
+ @import "components/credentials";
  @import "components/fields";
  @import "components/field-groups";
  @import "components/footer";
