Format datetime strings from API in a helper
* DRYs up the view code
* Use strptime to get the hour/minutes
* Tell user that this is UTC (until we add timezone support)

--- a/dpc-web/app/views/client_tokens/show.html.erb
+++ b/dpc-web/app/views/client_tokens/show.html.erb
@@ -33,7 +33,7 @@
 
       <div class="ds-u-margin-bottom--1">
         <label class="ds-u-margin-right--1 ds-u-color--muted">Created at:</label>
-        <%= @client_token['createdAt'] %>
+        <%= formatted_datestr(@client_token['createdAt']) %>
       </div>
     </div>
   </section>
