styles for keys list

--- a/dpc-web/app/assets/stylesheets/components/_credentials.scss
+++ b/dpc-web/app/assets/stylesheets/components/_credentials.scss
@@ -3,6 +3,10 @@
   padding: 0;
 }
 
+.credential {
+  display: flex;
+}
+
 .credential + .credential {
   border-top: 1px dashed $color-gray-lighter;
   margin-top: $spacer-2;
