--- a/dpc-web/app/views/public_keys/new.html.erb
+++ b/dpc-web/app/views/public_keys/new.html.erb
@@ -4,29 +4,31 @@
 
   <section class="ds-u-display--flex ds-u-justify-content--between ds-u-align-items--center">
 
-    <h1 class="ds-u-font-size--title ds-u-font-weight--normal ds-u-margin--0">Create a new Public Key</h1>
+    <h1 class="ds-u-font-size--title ds-u-font-weight--normal ds-u-margin--0">Add a public key</h1>
 
   </section>
 
   <section class="box">
     <div class="box__content">
+      <p class="ds-text--lead">This key will be added for <strong><%= @organization.name %></strong>.</p>
+
       <%= form_tag organization_public_keys_path(organization_id: params[:organization_id]), method: :post do %>
-        <div class="field">
+        <div class="field ds-u-margin-y--5">
           <%= label_tag :api_environment, "Environment", class: "ds-c-label" %>
-          <%= select_tag :api_environment, options_for_select(@organization.api_environment_strings, params[:api_environment]), include_blank: true %>
+          <%= select_tag :api_environment, options_for_select(@organization.api_environment_strings, params[:api_environment]), include_blank: true, class: "ds-c-field" %>
         </div>
 
-        <div class="field">
+        <div class="field ds-u-margin-y--5">
           <%= label_tag :label, "Label", class: "ds-c-label" %>
           <%= text_field_tag :label, params[:label], class: "ds-c-field" %>
         </div>
 
-        <div class="field">
+        <div class="field ds-u-margin-y--5">
           <%= label_tag :public_key, "Public Key", class: "ds-c-label" %>
-          <%= text_field_tag :public_key, params[:label], class: "ds-c-field" %>
+          <%= text_area_tag :public_key, params[:label], class: "ds-c-field" %>
         </div>
 
-        <%= submit_tag "Create", class: "ds-c-button ds-c-button--primary", data: { test: "form-submit" } %>
+        <%= submit_tag "Add key", class: "ds-c-button ds-c-button--primary", data: { test: "form-submit" } %>
       <% end %>
     </div>
   </section>
