--- a/dpc-web/app/views/internal/organizations/index.html.erb
+++ b/dpc-web/app/views/internal/organizations/index.html.erb
@@ -8,7 +8,7 @@
 
   <section class="ds-l-row--12 ds-l-md-col--9 ds-u-md-padding-left--2">
     <%= link_to new_internal_organization_path, class: "utility-button" do %>
-      <svg class="ds-u-color--success" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+      <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
         <use xlink:href="/assets/solid.svg#plus"></use>
       </svg>
       Create new organization
