--- a/dpc-web/app/views/internal/organizations/index.html.erb
+++ b/dpc-web/app/views/internal/organizations/index.html.erb
@@ -37,6 +37,15 @@
         <div class="module-container__primary">
           <h3 class="module-container__heading"><%= link_to org.name, internal_organization_path(org) %></h3>
         </div>
+        <div class="module-container__secondary ds-u-padding--2">
+          <% org.api_environment_strings.each do |api_env| %>
+            <svg class="icon ds-u-margin-right--1" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+              <use xlink:href="/assets/solid.svg#database"></use>
+            </svg>
+            <%= api_env.titleize %>
+          <% end %>
+        </div>
+
       </div>
     <% end %>
     <%= paginate @organizations %>
