DPC-593: As a user, I want to create client tokens in the dashboard. (#379)
* Remove DpcRegistration model

This wasn't really being used. I think it had been originally intended
as the model where API access and account info would be stored, but
now that logic is tied to organization rather than user so it doesn't
make sense to continue with this model which is tied to user.

This commit also adds dependent: :destroy to
organization_user_assignments in both Organization and User, as that
was an oversight previously. We want to make sure the assignment records
are deleted when the user or org is deleted.

* Move old profile to be registrations#show

* Work on client tokens management

* Add ClientTokenManager service object to handle client token creation login

* WIP Client token functionality

* Add macaroons gem

* Client token creation and view workflow

* With feature tests
* Remove client token destroy stuff until we're ready to finish it
* Only show client token if api request was successful; figure out
  appropriate error message to show user later

* Flesh out tests for client token creation

Also remove logic from ClientTokenManager that creates a registered org
if one doesn't exist yet when creating a client token. This shouldn't
ever happen and we probably want to know when it does.

* Add unit test for getting client tokens from api

* Add test token for development view purposes, commented

* fix unclosed section

* dashboard grid fix

* dashboard headings

* unassigned user design

* change button type

* styles for token front-end

* Format datetime strings from API in a helper

* DRYs up the view code
* Use strptime to get the hour/minutes
* Tell user that this is UTC (until we add timezone support)

* Do not break app for users if API Token GET fails

Rescue error and return empty array. Log that there was an error.

* WIP

* WIP with new API functionality

* More work on getting API 

--- a/dpc-web/app/assets/stylesheets/components/_boxes.scss
+++ b/dpc-web/app/assets/stylesheets/components/_boxes.scss
@@ -6,6 +6,21 @@
   margin: $spacer-3 0;
 }
 
+.box--dashed {
+  border-style: dashed;
+}
+
+.box__header {
+  align-items: center;
+  border-bottom: 1px solid $color-gray-lighter;
+  display: flex;
+  justify-content: space-between;
+}
+
+.box__header__actions {
+  margin-top: -$spacer-2;
+}
+
 .box__content {
   flex: 1 0 0;
   padding: $spacer-4;
