--- a/dpc-web/app/assets/stylesheets/application.scss
+++ b/dpc-web/app/assets/stylesheets/application.scss
@@ -23,6 +23,7 @@
  @import "settings/font-faces";
  @import "settings/variables";
  @import "base/base";
+ @import "base/typography";
  @import "components/accordions";
  @import "components/alerts";
  @import "components/benefit-prop";
@@ -30,6 +31,7 @@
  @import "components/boxes";
  @import "components/buttons";
  @import "components/cards";
+ @import "components/credentials";
  @import "components/fields";
  @import "components/field-groups";
  @import "components/footer";
