Enable internal user to create org from user page
If a user requests an org and that org doesn't exist, the internal user
managing that user can create an organization directly from the user's
edit page. The internal user clicks a link and then the new organization
form is populated on the organziations#new page with the user's
requested org info, so the internal user can modify or add anything as
needed. Then the internal user saves the org and gets redirected back to
the user's edit page and they can carry on from there.

--- a/dpc-web/app/views/internal/organizations/_fields.html.erb
+++ b/dpc-web/app/views/internal/organizations/_fields.html.erb
@@ -116,6 +116,7 @@
   </div>
 
   <div class="ds-l-col--12 ds-l-md-col--9 field-group__fields ds-u-border--0">
+    <%= hidden_field_tag :from_user, params[:from_user] %>
     <%= f.submit locals[:button_label], class: "ds-c-button ds-c-button--primary", data: { test: "form-submit" } %>
     <%= link_to "Cancel", :back, class: "ds-c-button ds-c-button--transparent" %>
   </div>
