--- a/dpc-web/app/views/internal/organizations/new.html.erb
+++ b/dpc-web/app/views/internal/organizations/new.html.erb
@@ -4,7 +4,7 @@
 
   <section class="ds-u-display--flex ds-u-justify-content--between ds-u-align-items--center">
 
-    <h1 class="ds-u-font-size--title ds-u-font-weight--normal ds-u-margin--0">Create a new provider organization</h1>
+    <h1 class="ds-u-font-size--title ds-u-font-weight--normal ds-u-margin--0" data-test="new-org-page">Create a new provider organization</h1>
 
   </section>
 
