--- a/dpc-web/app/views/internal/users/_form.html.erb
+++ b/dpc-web/app/views/internal/users/_form.html.erb
@@ -9,8 +9,24 @@
       <div class="ds-l-col--9 field-group__fields">
         <div class="field">
           <%= f.label :organization_id, class: "ds-c-label ds-u-margin-top--0" %>
-          <span class="ds-c-field__hint" id="requested_org_hint">This user originally requested <strong><%= @user.requested_organization %></strong> (<%= @user.requested_organization_type.titleize %> with <%= @user.requested_num_providers %> providers).</span>
-          <%= f.select :organization_ids, Organization.all.map{|o| [o.name, o.id]}, { include_blank: true }, class: "ds-c-field", value: @user.primary_organization.try(:id), 'aria-describedby': 'requested_org_hint' %>
+          <%= f.select :organization_ids, Organization.all.map{|o| [o.name, o.id]}, { selected: params[:user_organization_ids] || @user.organization_ids, include_blank: true }, class: "ds-c-field", value: @user.primary_organization.try(:id), 'aria-describedby': 'requested_org_hint' %>
+          <span class="ds-c-field__hint" id="requested_org_hint">
+          This user originally requested
+          <strong><%= @user.requested_organization %></strong>
+          (<%= @user.requested_organization_type.titleize %>
+          with <%= @user.requested_num_providers %> providers).
+          </span>
+          <%= link_to 'Create an organization from this info',
+              new_internal_organization_path(organization_name: @user.requested_organization,
+                                             organization_organization_type: @user.requested_organization_type,
+                                             organization_num_providers: @user.requested_num_providers,
+                                             organization_address_attributes_street: @user.address_1,
+                                             organization_address_attributes_street_2: @user.address_2,
+                                             organization_address_attributes_city: @user.city,
+                                             organization_address_attributes_state: @user.state,
+                                             organization_address_attributes_zip: @user.zip,
+                                             from_user: @user.id),
+              data: { test: 'convert-org-link' } %>
         </div>
       </div>
     </fieldset>
