--- a/dpc-web/app/views/internal/users/show.html.erb
+++ b/dpc-web/app/views/internal/users/show.html.erb
@@ -59,7 +59,7 @@
             <svg class="icon ds-u-margin-right--1 ds-u-color--muted" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
               <use xlink:href="/assets/solid.svg#clinic-medical"></use>
             </svg>
-            <%= org.name %>
+            <%= link_to org.name, internal_organization_path(org) %>
           </div>
 
           <div class="ds-u-margin-bottom--1">
@@ -87,7 +87,7 @@
         <% end %>
       <% else %>
         <p class="ds-u-color--muted">You have not assigned an organization to this person yet.</p>
-        <%= link_to "Assign an organization", edit_internal_user_url, class: "ds-c-button" %>
+        <%= link_to "Assign an organization", edit_internal_user_url, class: "ds-c-button", data: { test: 'assign-org-link' } %>
       <% end %>
     </div>
   </section>
