--- a/dpc-web/app/views/dashboard/_assigned_content.html.erb
+++ b/dpc-web/app/views/dashboard/_assigned_content.html.erb
@@ -1,6 +1,14 @@
 <div class="ds-l-row--12">
   <% @user.organizations.each do |organization| %>
     <h2 class="dashboard-section-heading"><%= organization.name %></h2>
+    <div class="box__header__actions">
+      <%= link_to edit_organization_path(id: organization.id), class: "ds-c-button ds-c-button--primary", data: { test: "edit-org-link" } do %>
+        <svg class="icon ds-u-margin-right--1" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+          <use xlink:href="/assets/solid.svg#plus"></use>
+        </svg>
+        Edit
+      <% end %>
+    </div>
     <section class="box">
       <div class="box__content">
         <div class="box__header">
