fixup! Add vendor field to organizations

--- a/dpc-web/app/views/internal/organizations/_fields.html.erb
+++ b/dpc-web/app/views/internal/organizations/_fields.html.erb
@@ -28,6 +28,11 @@
       <%= f.label :npi, "NPI", class: "ds-c-label" %>
       <%= f.text_field :npi, class: "ds-c-field" %>
     </div>
+
+    <div class="field">
+      <%= f.label :vendor, "Vendor", class: "ds-c-label" %>
+      <%= f.text_field :vendor, class: "ds-c-field" %>
+    </div>
   </div>
 </fieldset>
 
