--- a/dpc-web/app/views/internal/organizations/show.html.erb
+++ b/dpc-web/app/views/internal/organizations/show.html.erb
@@ -58,6 +58,11 @@
         <%= @organization.npi %>
       </div>
 
+      <div class="ds-u-margin-bottom--1">
+        <label class="ds-u-margin-right--1 ds-u-color--muted">Vendor</label>
+        <%= @organization.vendor %>
+      </div>
+
     </div>
 
     <div class="box__content">
