--- a/dpc-web/app/views/dashboard/_assigned_content.html.erb
+++ b/dpc-web/app/views/dashboard/_assigned_content.html.erb
@@ -10,6 +10,7 @@
     </section>
 
       <div>NPI: <%= npi_text(organization) %></div>
+      <div>Vendor: <%= vendor_text(organization) %></div>
 
     <section class="box">
       <div class="box__content">
