--- a/dpc-web/app/views/user_mailer/organization_sandbox_email.html.erb
+++ b/dpc-web/app/views/user_mailer/organization_sandbox_email.html.erb
@@ -4,7 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Dear <%= @user.first_name %> <%= @user.last_name %></h1>
+    <h1>Dear <%= @user.first_name %> <%= @user.last_name %>,</h1>
     <p>
       Congratulations! You have now been given access to the Data at the Point of Care sandbox! Once you
       follow the steps below, you will be able to develop and test your solution to retrieve important
@@ -18,7 +18,7 @@
     <p><b>To connect to the sandbox, follow these steps.</b></p>
 
     <ol>
-      <li>Log into your account at https://dpc.cms.gov</li>
+      <li>Log into your account at <a href="https://dpc.cms.gov">https://dpc.cms.gov</a></li>
       <li>Edit your organization to add the NPI number for your organization that you plan to use for
       testing. For the synthetic/test sandbox, you can use an individual  NPI (Type I) or an
       organizational NPI (Type II). </li>
@@ -30,7 +30,8 @@
       <li>Upload your public keys. For each public key you enter, you will receive a UUID for each key that
       you will use to authenticate with the API. </li>
       <li>Follow the documentation and start your testing!. Information on the data to use for testing can be
-      found here. https://github.com/CMSgov/dpc-app/blob/master/src/main/resources/README.md</li>
+      found here. <a href="https://github.com/CMSgov/dpc-app/blob/master/src/main/resources/README.md">
+      https://github.com/CMSgov/dpc-app/blob/master/src/main/resources/README.md</a></li>
     </ol>
 
     <p><b>What happens once you have successfully tested in the sandbox?</b></p>
@@ -51,14 +52,17 @@
       and will be attested to with each roster addition. </li>
       <li>Register each provider's FHIR end points in the <a href="https://nppes.cms.hhs.gov/#/">NPPES database</a>.
       The FHIR endpoint needs to have a minimum of a FHIR Capabilities statement and one resource.</li>
-      <li>Send us an email to DPCInfo@cms.hhs.gov when you feel you meet all the requirements and are
-      ready to enter the queue. Please include all of the details from the steps above, including:</li>
-          <ul>
-            <li>Summary of the rostering process</li>
-            <li>Certification information (from step 2)</li>
-            <li>Confirmation of understanding the Terms of Service</li>
-            <li>The initial providers NPIs for production use</li>
-          </ul>
+      <li>
+        Send us an email to DPCInfo@cms.hhs.gov when you feel you meet all the requirements and are
+        ready to enter the queue. Please include all of the details from the steps above, including:
+
+        <ul>
+          <li>Summary of the rostering process</li>
+          <li>Certification information (from step 2)</li>
+          <li>Confirmation of understanding the Terms of Service</li>
+          <li>The initial providers NPIs for production use</li>
+        </ul>
+      </li>
       <li>Once all details from the steps above have been received and we are ready, we will reach out
       to verify the information submitted and to schedule a demonstration of your solution. Remember,
       the information has to be included in the workflow of the clinician at the point of care without
